delete the corerank part in the scheme
